src/assets/main.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

@import './base.scss';

button {
  svg {
    @apply size-6;
  }
}

#app {
  @apply h-dvh;
}

@layer components {
  .Container {
    width: min(100% - 30px, 1300px);
    margin-inline: auto;
  }

  .CardContainer {
    @apply flex w-[350px] shrink-0 cursor-pointer flex-col items-start self-stretch rounded-xl border border-solid border-outline bg-surface p-4 duration-200 max-sm:w-full;

    &:focus,
    &:active,
    &:hover {
      @apply bg-active-card;
    }

    &-full {
      @apply w-full;
    }
  }

  .ErrorText {
    @apply text-error-bg;
  }
}

@layer utilities {
  .MobileButtonContainer {
    @apply max-sm:fixed max-sm:bottom-24 max-sm:right-4 max-sm:z-[5];
  }
}

